Text wrap long urls to prevent overflow on mobile screens

--- a/themes/laoyc2016/css/style.css
+++ b/themes/laoyc2016/css/style.css
@@ -6969,3 +6969,22 @@ p:last-child,
   margin: 5px 0 10px;
   padding: 0;
 }
+/**
+ * LA OYC 2016 styles.
+ */
+@media (min-width: 768px) {
+  .navbar-btn {
+    display: none;
+  }
+}
+.view-resource-guide .field--name-field-services {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
